[gd_scene load_steps=66 format=2]

[ext_resource path="res://Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Hitboxes and Hurtboxes/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/SwordHitBox.gd" type="Script" id=4]
[ext_resource path="res://Hitboxes and Hurtboxes/HurtBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=6]
[ext_resource path="res://Music and Sounds/Swipe.wav" type="AudioStream" id=7]
[ext_resource path="res://Music and Sounds/Evade.wav" type="AudioStream" id=8]
[ext_resource path="res://WhiteColorShader.gdshader" type="Shader" id=9]
[ext_resource path="res://Player/Label.gd" type="Script" id=10]
[ext_resource path="res://Player/ExperienceBar.tscn" type="PackedScene" id=11]
[ext_resource path="res://Montserrat-Bold.ttf" type="DynamicFontData" id=12]

[sub_resource type="ShaderMaterial" id=50]
shader = ExtResource( 9 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 4.0

[sub_resource type="Animation" id=25]
resource_name = "AttackDown"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBoxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBoxPivot/SwordHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=26]
resource_name = "AttackLeft"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 33, 33, 34, 35 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBoxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBoxPivot/SwordHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=27]
resource_name = "AttackRight"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBoxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBoxPivot/SwordHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=28]
resource_name = "AttackUp"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBoxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBoxPivot/SwordHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=9]
resource_name = "IdleDown"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=10]
resource_name = "IdleLeft"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=6]
resource_name = "IdleRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "IdleUp"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBoxPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBoxPivot/SwordHitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=37]
resource_name = "RollDown"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 55, 56, 57, 58, 59 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=38]
resource_name = "RollLeft"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53, 54 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=39]
resource_name = "RollRight"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=40]
resource_name = "RollUp"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=8]
resource_name = "RunDown"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 18 ]
}

[sub_resource type="Animation" id=4]
resource_name = "RunLeft"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 12 ]
}

[sub_resource type="Animation" id=3]
resource_name = "RunRight"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "RunUp"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 6 ]
}

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "AttackLeft"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "AttackUp"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "AttackRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=33]
blend_point_0/node = SubResource( 29 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 30 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 31 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 32 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=15]
blend_point_0/node = SubResource( 11 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 12 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 13 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 14 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "RollLeft"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "RollDown"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "RollRight"

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "RollUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=45]
blend_point_0/node = SubResource( 41 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 42 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 43 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 44 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "RunUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=20]
blend_point_0/node = SubResource( 16 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 17 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 18 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 19 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachine" id=23]
states/Attack/node = SubResource( 33 )
states/Attack/position = Vector2( 91, 214 )
states/Idle/node = SubResource( 15 )
states/Idle/position = Vector2( 91, 86 )
states/Roll/node = SubResource( 45 )
states/Roll/position = Vector2( 97, -32 )
states/Run/node = SubResource( 20 )
states/Run/position = Vector2( 305, 91 )
transitions = [ "Idle", "Run", SubResource( 21 ), "Run", "Idle", SubResource( 22 ), "Idle", "Attack", SubResource( 34 ), "Attack", "Idle", SubResource( 35 ), "Idle", "Roll", SubResource( 46 ), "Roll", "Idle", SubResource( 47 ) ]
start_node = "Idle"
graph_offset = Vector2( -13.5377, -48.719 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=24]

[sub_resource type="CapsuleShape2D" id=36]
height = 12.0

[sub_resource type="CapsuleShape2D" id=48]
radius = 8.0
height = 6.0

[sub_resource type="Animation" id=53]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=51]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=52]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=54]
size = 26
font_data = ExtResource( 12 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 127, 80 )
collision_layer = 2
script = ExtResource( 2 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, 2 )
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 50 )
position = Vector2( 0, -9 )
texture = ExtResource( 1 )
hframes = 60
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackDown = SubResource( 25 )
anims/AttackLeft = SubResource( 26 )
anims/AttackRight = SubResource( 27 )
anims/AttackUp = SubResource( 28 )
anims/IdleDown = SubResource( 9 )
anims/IdleLeft = SubResource( 10 )
anims/IdleRight = SubResource( 6 )
anims/IdleUp = SubResource( 7 )
anims/RESET = SubResource( 2 )
anims/RollDown = SubResource( 37 )
anims/RollLeft = SubResource( 38 )
anims/RollRight = SubResource( 39 )
anims/RollUp = SubResource( 40 )
anims/RunDown = SubResource( 8 )
anims/RunLeft = SubResource( 4 )
anims/RunRight = SubResource( 3 )
anims/RunUp = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 23 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 24 )
parameters/Attack/blend_position = Vector2( 0, 1 )
parameters/Idle/blend_position = Vector2( 0, 1 )
parameters/Roll/blend_position = Vector2( 0, 1 )
parameters/Run/blend_position = Vector2( 0, 1 )

[node name="HitBoxPivot" type="Position2D" parent="."]
position = Vector2( 0, -4 )

[node name="SwordHitBox" parent="HitBoxPivot" instance=ExtResource( 3 )]
position = Vector2( 15, 0 )
collision_mask = 8
script = ExtResource( 4 )

[node name="CollisionShape2D" parent="HitBoxPivot/SwordHitBox" index="0"]
shape = SubResource( 36 )
disabled = true

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -7 )
shape = SubResource( 48 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/RESET = SubResource( 53 )
anims/Start = SubResource( 51 )
anims/Stop = SubResource( 52 )

[node name="ExperienceInterface" type="Node2D" parent="."]
position = Vector2( 56, -1 )
scale = Vector2( 0.1, 0.1 )

[node name="Label" type="Label" parent="ExperienceInterface"]
margin_left = -350.0
margin_top = -410.0
margin_right = 100.0
margin_bottom = -320.0
size_flags_vertical = 1
size_flags_stretch_ratio = 14.59
custom_fonts/font = SubResource( 54 )
text = "hello"
script = ExtResource( 10 )

[node name="ExperienceBar" parent="ExperienceInterface" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -710.0
margin_top = -310.0
margin_right = 151.0
margin_bottom = -241.0

[connection signal="experience_gained" from="." to="ExperienceInterface/ExperienceBar" method="_on_Player_experience_gained"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="." method="_on_HurtBox_invincibility_started"]

[editable path="HitBoxPivot/SwordHitBox"]
[editable path="HurtBox"]
